k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "<your-domain-or-ip>"
    http:
      paths:
      - path: /service-A
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 80
      - path: /service-B
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80
